<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
        android:background="#0C0C28">

    <!--        <LinearLayout-->
<!--            android:id="@+id/field1"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:orientation="vertical"-->
<!--            android:background="#FCF6FF"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/title"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent">-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="8dp"-->
<!--                android:text="@string/d1"-->
<!--                android:textColor="#000000"-->
<!--                android:textSize="12sp" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="8dp"-->
<!--                android:text="@string/s1"-->
<!--                android:textColor="#000000"-->
<!--                android:textStyle="bold" />-->

<!--            <EditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="40dp"-->
<!--                android:autofillHints=""-->
<!--                android:background="#FFFFFF"-->
<!--                android:hint="@string/t1"-->
<!--                android:inputType="textMultiLine"-->
<!--                android:minLines="3"-->
<!--                android:padding="8dp"-->
<!--                android:textSize="12sp" />-->
<!--        </LinearLayout>-->

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/dream_journal_title"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/field2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/field2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:background="#F1DAE1"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alatsi"
            android:padding="8dp"
            android:text="@string/d2"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alatsi"
            android:padding="8dp"
            android:text="@string/s2"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:fontFamily="@font/alatsi"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:padding="8dp"
            android:text="@string/t2"
            android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/field3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:background="#DBB0BD"
            app:layout_constraintTop_toBottomOf="@+id/field2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alatsi"
                android:padding="8dp"
                android:text="@string/d3"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alatsi"
                android:padding="8dp"
                android:text="@string/s3"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:fontFamily="@font/alatsi"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:padding="8dp"
                android:text="@string/t3"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/field4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:background="#CD97A7"
            app:layout_constraintTop_toBottomOf="@+id/field3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alatsi"
                android:padding="8dp"
                android:text="@string/d4"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alatsi"
                android:padding="8dp"
                android:text="@string/s4"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:fontFamily="@font/alatsi"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:padding="8dp"
                android:text="@string/t4"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/field5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:background="#C57D92"
            app:layout_constraintTop_toBottomOf="@+id/field4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alatsi"
                android:padding="8dp"
                android:text="@string/d5"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/s5"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:fontFamily="@font/alatsi"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:padding="8dp"
                android:text="@string/t5"
                android:textSize="14sp" />
        </LinearLayout>

    <Button
        android:id="@+id/addNewButton"
        android:layout_width="116dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#007BFF"
        android:fontFamily="@font/alatsi"
        android:text="@string/addbtn"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field5"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/bottomNavigationView"
        android:layout_width="411dp"
        android:layout_height="80dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bottom_nav_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewButton"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="338dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/Home" />

        <Button
            android:id="@+id/Home"
            android:layout_width="27dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="344dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/path" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="227dp"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/dreams" />

        <Button
            android:id="@+id/dreams"
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="234dp"
            android:layout_marginBottom="33dp"
            android:background="@drawable/union" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="115dp"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/Settings" />

        <Button
            android:id="@+id/Settings"
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="135dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/settings" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/User" />

        <Button
            android:id="@+id/User"
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/user" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>